--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
                             <finalName>main</finalName>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ru.job4j.SpringDIScope</mainClass>
+                                    <mainClass>ru.job4j.di.SpringDIScope</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
